src/test/ui/feature-gates/feature-gate-never_type.stderr
error[E0658]: The `!` type is experimental
  --> $DIR/feature-gate-never_type.rs:7:17
   |
LL | type Ma = (u32, !, i32);
   |                 ^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/35121
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental
  --> $DIR/feature-gate-never_type.rs:8:20
   |
LL | type Meeshka = Vec<!>;
   |                    ^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/35121
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental
  --> $DIR/feature-gate-never_type.rs:9:24
   |
LL | type Mow = &'static fn(!) -> !;
   |                        ^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/35121
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental
  --> $DIR/feature-gate-never_type.rs:10:27
   |
LL | type Skwoz = &'static mut !;
   |                           ^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/35121
   = help: add #![feature(never_type)] to the crate attributes to enable

error[E0658]: The `!` type is experimental
  --> $DIR/feature-gate-never_type.rs:13:16
   |
LL |     type Wub = !;
   |                ^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/35121
   = help: add #![feature(never_type)] to the crate attributes to enable

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0658`.
